# Free-Backend

./: .firebaserc  .gitignore  DEPLOY-BACKEND.md  DEPLOY.md  DEPLOYMENT-GUIDE.md  EIOR-INTEGRATION-SUMMARY.md  EIOR-OPENCLAW-INTEGRATION.md  GITHUB-SETUP.md  README.md  deploy.ps1  deploy.sh  firebase.json  setup-vercel-env.ps1  vps-setup.sh
.kiro/specs/api-external-integration-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/eior-app-enhancements/: design.md  requirements.md  tasks.md
ai-platform/: .env.example  .firebaserc  Dockerfile  README.md  docker-compose.yml  firebase.json  package-lock.json  package.json  tsconfig.json
ai-platform/portal/: chat.html  config.js  dashboard.html  docs.html  index.html  keys.html  models.html  settings.html  style.css  vps.html
ai-platform/scripts/: init-db.sql  migrate.cjs
ai-platform/sdk/python/: README.md  pyproject.toml
ai-platform/sdk/python/eior/: __init__.py
ai-platform/src/: server.ts
backend/: .env.example  null  package-lock.json  package.json  test-auth-enhancement.js  test-eior-openai.js  vercel.json  vitest.config.js
backend/api/: [[...path]].js  index.js
backend/src/: app.js  config.js  index.js  server.js
backend/src/db/: index.js
examples/: openclaw-eior-example.js
frontend/: .env.example  .firebaserc  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api-v2.ts  api.ts  backendFetch.ts
functions/: index.js  package-lock.json  package.json
(+108 files in other folders)
